# aqt

./: .gitignore  CONTRIBUTING.md  METADATA  OWNERS  README.md  pyproject.toml  setup.py
aqt/: BUILD  __init__.py  compute_cost_utils.py  compute_cost_utils_test.py  flax_attention.py  flax_attention_test.py  flax_layers.py  flax_layers_test.py  fp_cast_test.py  get_bounds.py  get_bounds_test.py  hlo_utils.py  hlo_utils_test.py  primitives_test.py  pyproject.toml  quant_config.py  quantization.py  quantization_test.py  shape_utils.py  stats.py  stats_tag.py  stats_tag_test.py  stats_test.py  test_utils.py  train_utils.py  train_utils_test.py  utils.py
aqt/common/: aqt_common.py  aqt_config.py  aqt_config_schedule_test.py  emulated_floating_points.py  emulation_utils.py
aqt/flax/: struct.py
aqt/g3doc/: README.md  aqt_development.md  faq.md  pip_package.md  sitemap.md
aqt/jax/: aqt_conv_general.py  aqt_conv_general_test.py  aqt_custom_impl.py  aqt_custom_impl_test.py  aqt_dot_general.py  aqt_dot_general_research.py  aqt_dot_general_research_test.py  aqt_dot_general_test.py  aqt_matmul.py  aqt_ops.py  aqt_tensor.py  aqt_tensor_test.py  aqt_utils.py
aqt/jax/v2/: aqt_conv_general.py  aqt_conv_general_test.py  aqt_dot_general.py  aqt_dot_general_test.py  aqt_pallas.py  (+19 more)
aqt/jax_legacy/: README.md
aqt/tensorflow/: aqt_common.py  aqt_config.py  aqt_config_schedule_test.py  aqt_conv2d.py  aqt_conv2d_test.py  aqt_conv_test_base.py  aqt_einsum.py  aqt_einsum_test.py  aqt_matmul.py  aqt_matmul_test.py  aqt_ops.py  aqt_ops_util.py  aqt_ops_util_test.py  aqt_stats_test_base.py  aqt_tensor.py  aqt_tensor_test.py  aqt_tensor_test_base.py  aqt_test_shared_base.py
aqt/test/: aqt_matmul_test_base.py  aqt_stats_test_base.py  aqt_tensor_test_base.py
(+214 files in other folders)
